--- a/12_solar-system/sd-022-a-project-solar-system/src/App.css
+++ b/12_solar-system/sd-022-a-project-solar-system/src/App.css
@@ -1,3 +1,56 @@
 .App {
   text-align: center;
 }
+
+body {
+  background-image: url(./images/background.png);
+  display: flex;
+  justify-content: center;
+}
+
+.first-section {
+  display: flex;
+  justify-content: center;
+}
+
+.header {
+  background-color: rgba(255, 255, 255, 0.073);
+  border-bottom: 1px solid white;
+  border-radius: 5px;
+  color: white;
+  display: flex;
+  align-items: center;
+  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 400;
+  font-size: 30px;
+  height: 150px;
+  justify-content: center;
+  width: 1600px;
+}
+
+.planetCard {
+  display: flex;
+  height: 200px;
+  margin: 5px;
+  text-align: center;
+  flex-direction: column;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 500;
+  font-size: 20px;
+  border-radius: 5px;
+}
+
+.solarSystem {
+  display: inline-block;
+}
+
+.planetImage {
+  width: 200px;
+}
+
+.divPlanet {
+  color: white;
+  display: flex;
+  justify-content: center;
+  flex-flow: wrap row;
+}
